[gd_scene load_steps=4 format=3 uid="uid://cmfjauwtojfle"]

[ext_resource type="Script" path="res://Ammo/AmmoHolder.gd" id="1"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="2"]
radius = 16.0

[node name="AmmoHolder" type="Node2D"]
script = ExtResource("1")

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.3

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("1")

[node name="LetGoArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LetGoArea"]
shape = SubResource("2")

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="LetGoArea" to="." method="_on_LetGoArea_body_exited"]
